# python-utility

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  template.yml
.github/workflows/: build.yaml  coverage.yaml  lint.yaml  tag-release.yaml  unit-tests.yaml
docs/: README.md
lambda_layer/: Makefile
lambda_layer/no_deps/: requirements.txt
tests/: .coveragerc  __setup__.py  conftest.py  pytest.ini  requirements.txt  test___init__.py  test_common.py  test_exceptions.py  test_io.py  test_json.py  test_log.py  test_platform.py
tests/events/__init__/: 0101-debug.json
tests/events/common/: 0101-delay.json  0201-unique-strings.json  0202-unique-integers.json  0301-is_executable-true.json  0302-is_executable-false.json
tests/events/exceptions/: 0101-module_error.json  0201-validation_error.json
tests/events/io/: 0101-cdtmp-remove.json  0102-cdtmp-retain.json
tests/events/json/: 0101-fmt_json.json  0201-load_json.json  0301-load_json_schema.json
tests/events/log/: 0101-get_logger.json  0102-get_logger.json  0201-add_log_stream.json  0301-create_console_handler.json  0401-clear_root_handlers.json
tests/events/platform/: 0101-platform.json
topshelfsoftware_util/: __init__.py  aws.py  common.py  exceptions.py  io.py  json.py  log.py  platform.py
trp_custom_util/: __init__.py  aws.py  common.py  exceptions.py  io.py  platform.py
