[tool.poetry]
name = "topshelfsoftware_util"
version = "0.2.0"
description = "A collection of python utilities"
license="MIT"
authors = [
    "Tanner Pubins"
]
readme = "./docs/README.md"
repository = "https://github.com/topshelfsoftware/python-utility"

[tool.poetry.dependencies]
python = "^3.7"
coloredlogs = "^15"  # MIT license

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"